Plugin name refactor

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=ClanEventAttendance
+author=JoRouss
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=Get a list of clan event attendance
+tags=clan,event
+plugins=com.ClanEventAttendance.ClanEventAttendancePlugin
