Added better description and tags

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=ClanEventAttendance
 author=JoRouss
 support=
 description=Get a list of clan event attendance
-tags=clan,event
+tags=clan,event,attendance
 plugins=com.ClanEventAttendance.ClanEventAttendancePlugin
