Added support link

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=ClanEventAttendance
 author=JoRouss
-support=
+support=https://github.com/JoRouss/runelite-ClanEventAttendance
 description=Get a list of clan event attendance
 tags=clan,event,attendance
 plugins=com.ClanEventAttendance.ClanEventAttendancePlugin
