Improved description and Readme

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=ClanEventAttendance
 author=JoRouss
 support=https://github.com/JoRouss/runelite-ClanEventAttendance
-description=Get a list of clan event attendance
-tags=clan,event,attendance
+description=Track clan event attendance and time spent at the event
+tags=clan,event,attendance,time
 plugins=com.ClanEventAttendance.ClanEventAttendancePlugin
