Added spaces to the display name

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,4 +1,4 @@
-displayName=ClanEventAttendance
+displayName=Clan Event Attendance
 author=JoRouss
 support=https://github.com/JoRouss/runelite-ClanEventAttendance
 description=Track clan event attendance and time spent at the event
